# termgif

./: .gitignore  .mailmap  CHANGELOG.md  CHANGLELOG.md  LICENSE  NOTICE  README.md  pyproject.toml  setup.py
.github/: CODE_OF_CONDUCT.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: api_reference.md
examples/basic/: call.py
termgif/: __init__.py  convert.py  record_win.py  wrap.py
termgif/linux/: __init__.py  record_win.py
termgif/macos/: __init__.py  record_win.py
tests/: import_test.py  linux_test.py  macos_test.py  record_test.py
